--- a/ApiAppDemo.csproj
+++ b/ApiAppDemo.csproj
@@ -145,6 +145,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="sqldata.sql.txt" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
