--- a/ApiAppDemo.csproj
+++ b/ApiAppDemo.csproj
@@ -192,6 +192,7 @@
     <Content Include="Views\User\Index.cshtml" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+    <Content Include="Views\User\Create.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
